--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -652,11 +652,12 @@
         </dxi-item>
 
         <dxi-item title="KPI´s">
-            <dx-chart id="chart1" [dataSource]="kmsXOperacion" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".22"></dxi-value-axis>
+            <dx-chart id="chart1" [dataSource]="kmsXOperacion" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [rotationAngle]="-90"
+                     backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -666,11 +667,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart2" [dataSource]="kmsXUdn" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".22"></dxi-value-axis>
+            <dx-chart id="chart2" [dataSource]="kmsXUdn" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [rotationAngle]="-90"
+                     backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -680,11 +682,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart3" [dataSource]="porXOperacion" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".22"></dxi-value-axis>
+            <dx-chart id="chart3" [dataSource]="porXOperacion" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".44"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
+                     [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -694,11 +697,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart4" [dataSource]="porXCargadosUdn" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".22"></dxi-value-axis>
+            <dx-chart id="chart4" [dataSource]="porXCargadosUdn" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
+                     [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -708,11 +712,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart5" [dataSource]="porXFlotaOperacion" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".22"></dxi-value-axis>
+            <dx-chart id="chart5" [dataSource]="porXFlotaOperacion" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".44"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
+                     [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
@@ -722,11 +727,12 @@
             </dx-chart>
             <br><br>
 
-            <dx-chart id="chart6" [dataSource]="porXFlotaUdn" palette="violet" >
-                <dxi-value-axis [maxValueMargin]=".44"></dxi-value-axis>
+            <dx-chart id="chart6" [dataSource]="porXFlotaUdn" palette="pastel" [rotated]="false">
+                <dxi-value-axis [maxValueMargin]=".15"></dxi-value-axis>
                 <dxo-common-series-settings argumentField="tipoOperacion" type="bar" valueField="valor">
-                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip" [rotationAngle]="-90" backgroundColor="transparent">
-                        <dxo-font size="10" color="black"></dxo-font>
+                    <dxo-label [visible]="true" position="outside" [customizeText]="formatSliderTooltip"
+                     [rotationAngle]="-90" backgroundColor="transparent" [verticalOffset]="15">
+                        <dxo-font size="11" color="black" weight="bold"></dxo-font>
                     </dxo-label>
                 </dxo-common-series-settings>
                 <dxo-series-template nameField="mes" [customizeSeries]="customizeSeries"></dxo-series-template>
