--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -1748,7 +1748,7 @@
                     <dxi-column dataField="facturado" caption="Facturado" alignment="right" [width]="150" [format]="formating"></dxi-column>
                     <dxi-column dataField="provision" caption="Provisión" alignment="right" [width]="150" [format]="formating"></dxi-column>
                     <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" [width]="150" [format]="formating"></dxi-column>
-                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" [width]="150" [format]="formating"></dxi-column>
+                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" [width]="150" cssClass="border-right" [format]="formating"></dxi-column>
                 </dxi-column>
 
                 <dxi-column caption="RESUMEN DEL MES"  alignment="center" [allowSorting]="false">
