--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -412,17 +412,14 @@
                     <dxi-column dataField="flete" caption="Ingreso por Flete" [format]="enteros" [width]="150"></dxi-column>
                     <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
                 </dxi-column>
-                <!-- <dxi-column caption="Por Viajes Acumulados">
-                    <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="150"></dxi-column>
-                    <dxi-column dataField="fleteAcumulado" caption="Flete acumulado" [format]="enteros" [width]="150"></dxi-column>
-                    <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="170"></dxi-column>
-                </dxi-column> -->
-
-
-                <!-- <dxi-column dataField="ciclo" caption="Ciclo" [width]="100"></dxi-column>
-                <dxi-column dataField="cicloCliente" caption="Ciclo cliente" [width]="140"></dxi-column>
-                <dxi-column dataField="idArea" caption="Id área" [width]="100"></dxi-column> -->
-
+                <dxi-column caption="Ingreso Convenio Comercial">   
+                    <dxi-column dataField="kmsRuta" caption="Kms. Ruta" format="$ #,###,###.##;-$ #,##0.##" [width]="130"></dxi-column>
+                    <dxi-column dataField="ingrXKmRuta" caption="Ingr. Km. Ruta" format="$ #,###,###.##;-$ #,##0.##" [width]="160"></dxi-column>
+                </dxi-column>
+                <dxi-column caption="Desviación Kms. Comercial vs Real">
+                    <dxi-column dataField="desvKms" caption="Desv. Kms." [format]="separator" [width]="130"></dxi-column>
+                    <dxi-column dataField="desvPor" caption="Desv. Por." format="percent" [width]="130"></dxi-column>
+                </dxi-column>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
                     <div style="font-weight: bolder; color: black">
